--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -5,6 +5,7 @@
 	<div class="col-lg-6">
 		<div class="box-element" id="form-wrapper">
 			<form id="form">
+				{% csrf_token %}
 				<div id="user-info">
 					<div class="form-field">
 						<input required class="form-control" type="text" name="name" placeholder="Name..">
@@ -43,6 +44,8 @@
 		<br>
 		<div class="box-element hidden" id="payment-info">
 			<small>Paypal Options</small>
+			<div id="paypal-button-container"></div>
+			<!-- <button id="make-payment">Make Payment</button> -->
 		</div>
 
 	</div>
@@ -57,7 +60,7 @@
 			<div class="cart-row">
 				<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
 				<div style="flex:2">
-					<p>{{item.product}}</p>
+					<p>{{item.product.name}}</p>
 				</div>
 				<div style="flex:1">
 					<p>${{item.product.price|floatformat:2}}</p>
@@ -72,4 +75,107 @@
 		</div>
 	</div>
 </div>
+<script
+	src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
+<script>
+	var total = '{{order.get_cart_total}}'
+	// Render the PayPal button into #paypal-button-container
+	paypal.Buttons({
+
+		// Set up the transaction
+		createOrder: function (data, actions) {
+			return actions.order.create({
+				purchase_units: [{
+					amount: {
+						value: parseFloat(total).toFixed(2)
+					}
+				}]
+			});
+		},
+
+		// Finalize the transaction
+		onApprove: function (data, actions) {
+			return actions.order.capture().then(function (details) {
+				// Show a success message to the buyer
+				submitFormData()
+				// alert('Transaction completed by ' + details.payer.name.given_name + '!');
+			});
+		}
+
+
+	}).render('#paypal-button-container');
+</script>
+<script type="text/javascript">
+	var shipping = '{{order.shipping}}'
+	var total = '{{order.get_cart_total}}'
+	if (shipping == 'False') {
+		document.getElementById('shipping-info').innerHTML = ''
+	}
+
+	if (user != 'AnonymousUser') {
+		document.getElementById('user-info').innerHTML = ''
+	}
+
+	if (shipping == 'False' && user != 'AnonymousUser') {
+		document.getElementById('form-wrapper').classList.add('hidden')
+		document.getElementById('payment-info').classList.remove('hidden')
+	}
+	var form = document.getElementById('form')
+	csrftoken = form.getElementsByTagName('input')[0].value
+	console.log('Newtoken:', form.getElementsByTagName('input')[0].value)
+
+	form.addEventListener('submit', function (e) {
+		e.preventDefault()
+		console.log('Form submitted...')
+		document.getElementById('form-button').classList.add('hidden')
+		document.getElementById('payment-info').classList.remove('hidden')
+	})
+	// document.getElementById('make-payment').addEventListener('click', function (e) {
+	// 	submitFormData()
+	// })
+	function submitFormData() {
+		console.log('Payment button clicked')
+
+		var userFormData = {
+			'name': null,
+			'email': null,
+			'total': total,
+		}
+		var shippingInfo = {
+			'address': null,
+			'city': null,
+			'state': null,
+			'zipcode': null,
+		}
+
+		if (shipping != 'False') {
+			shippingInfo.address = form.address.value
+			shippingInfo.city = form.city.value
+			shippingInfo.state = form.state.value
+			shippingInfo.zipcode = form.zipcode.value
+		}
+
+		if (user == 'AnonymousUser') {
+			userFormData.email = form.email.value
+			userFormData.name = form.name.value
+		}
+		var url = '/process_order/'
+		fetch(url, {
+			method: 'POST',
+			headers: {
+				'Content-Type': 'application/json',
+				'X-CSRFToken': csrftoken,
+			},
+			body: JSON.stringify({ 'form': userFormData, 'shipping': shippingInfo })
+		})
+			.then((response) => response.json())
+			.then((data) => {
+				console.log('Success:', data);
+				alert('Transaction completed');
+				cart = {}
+				document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/'
+				window.location.href = "{% url 'store' %}"
+			})
+	}
+</script>
 {% endblock content %}
