--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -39,7 +39,7 @@
 			return null
 		}
 		var cart = JSON.parse(getCookie('cart'))
-		if (cart == undefined){
+		if (cart == undefined) {
 			cart = {}
 			console.log('Cart was crated!')
 			document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/'
@@ -65,8 +65,12 @@
 
 			</ul>
 			<div class="form-inline my-2 my-lg-0">
-				<a href="#" class="btn btn-warning">Login</a>
-
+				{% if request.user.is_authenticated %}
+				<span style="margin-right: 30px; color: white;">Hello, {{request.user}}</span>
+				<span><a class="btn btn-sm btn-light" style="color: black;" href="{% url 'logout' %}">Logout</a></span>
+				{% else %}
+				<a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+				{% endif %}
 				<a href="{% url 'cart' %}">
 					<img id="cart-icon" src="{% static 'images/cart.png' %}">
 				</a>
